# TMT

./: .gitignore  CLI.md  MULTI.md  README.md  config.toml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  tmt.pptx  tmt.py  tmt_chimerys.py  tmt_chimerys_dda.py  tmt_chimerys_dda_gui.py  tmt_chimerys_gui.py  tmt_chimerys_multi.py  tmt_diann.py  tmt_spectronaut.py
.github/workflows/: pyright.yml  pytest.yml  ruff.yml
data/: 20250519_Astral1_Evo_TH071_TT_THIDmulti003_pool_DIA_mz0c5_3ng_ij80ms_1.xlsx  20250519_Astral1_Evo_TH071_TT_THIDmulti003_pool_DIA_mz0c5_3ng_ij80ms_1_PSMs.txt  mz1.parquet
docs/: dda_impurity.pptx  identification_to_ms2_match.pptx  tmt.pptx  tmt_script_wf.pptx
multi/: tmt_chimerys_dda_multi.py  tmt_chimerys_multi.py  tmt_diann_multi.py  tmt_spectronaut_multi.py
notebooks/: 20250519_Astral1_Evo_TH071_TT_THIDmulti003_pool_DIA_mz0c5_3ng_ij80ms_1_purity_tmt_quant.ipynb  20250519_Astral1_Evo_TH071_TT_THIDmulti003_pool_DIA_mz0c5_3ng_ij80ms_1_purity_tmt_quant.xlsx  20250519_Astral1_Evo_TH071_TT_THIDmulti003_pool_DIA_mz0c5_3ng_ij80ms_1_purity_tmt_quant_txt.ipynb  mz0c5.csv  mz0c5.ipynb  mz0c5_purity_tmt_quant.ipynb  mz0c7.ipynb  mz1.ipynb  mz1_purity_tmt_quant.ipynb  mz5_purity_tmt_quant.ipynb  tmt_spectronaut.py
scripts/: config.toml  tmt18plex_default.ini  tmt_chimerys.py  tmt_chimerys_dda.py  tmt_chimerys_dda_gui.py  tmt_chimerys_dda_gui.spec  tmt_chimerys_gui.py  tmt_chimerys_gui.spec  tmt_diann.py  tmt_diann_gui.py  tmt_diann_gui.spec  tmt_spectronaut.py  tmt_spectronaut_gui.py  tmt_spectronaut_gui.spec
tests/: tests.py
